--- a/Journal Core Data/Journal Core Data/View/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/View/Base.lproj/Main.storyboard
@@ -26,20 +26,20 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="64.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="I78-Qb-d8b">
-                                            <rect key="frame" x="8" y="8" width="359" height="48.666666666666657"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="I78-Qb-d8b">
+                                            <rect key="frame" x="16" y="7.9999999999999964" width="343" height="48.666666666666657"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ntm-fw-kgy">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="20.333333333333332"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="22.333333333333332"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5F-w9-WKu">
-                                                            <rect key="frame" x="0.0" y="0.0" width="315.66666666666669" height="20.333333333333332"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="299.66666666666669" height="21.666666666666668"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dkf-EX-AGl">
-                                                            <rect key="frame" x="323.66666666666669" y="0.0" width="35.333333333333314" height="17"/>
+                                                            <rect key="frame" x="307.66666666666669" y="0.0" width="35.333333333333314" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -47,7 +47,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rma-hz-qzZ">
-                                                    <rect key="frame" x="0.0" y="28.333333333333336" width="359" height="20.333333333333336"/>
+                                                    <rect key="frame" x="0.0" y="28.333333333333336" width="343" height="20.333333333333336"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -56,10 +56,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="I78-Qb-d8b" firstAttribute="leading" secondItem="pFL-pK-5My" secondAttribute="leading" constant="8" id="Ua3-Ql-Y5R"/>
+                                        <constraint firstItem="I78-Qb-d8b" firstAttribute="leading" secondItem="pFL-pK-5My" secondAttribute="leading" constant="16" id="Ua3-Ql-Y5R"/>
                                         <constraint firstAttribute="bottom" secondItem="I78-Qb-d8b" secondAttribute="bottom" constant="8" id="Y5a-5I-Yqz"/>
                                         <constraint firstItem="I78-Qb-d8b" firstAttribute="top" secondItem="pFL-pK-5My" secondAttribute="top" constant="8" id="i0k-dT-LnO"/>
-                                        <constraint firstAttribute="trailing" secondItem="I78-Qb-d8b" secondAttribute="trailing" constant="8" id="skK-zv-AIZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="I78-Qb-d8b" secondAttribute="trailing" constant="16" id="skK-zv-AIZ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -96,7 +96,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Csq-Af-b0I">
-                                <rect key="frame" x="16" y="104" width="343" height="345"/>
+                                <rect key="frame" x="16" y="156" width="343" height="319"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="77a-Va-XxU">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
@@ -105,7 +105,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MFe-Sp-ATJ">
-                                        <rect key="frame" x="0.0" y="38" width="343" height="307"/>
+                                        <rect key="frame" x="0.0" y="38" width="343" height="281"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -142,8 +142,8 @@
         <scene sceneID="WPK-vS-GIZ">
             <objects>
                 <navigationController id="GcV-yz-kbL" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3js-DZ-QJ5">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="3js-DZ-QJ5">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
